--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,55 @@ body {
   color: black;
   text-transform: uppercase;
   list-style: none;
-  line-height: 26px;
-  width:1200px;
+  height: 26px;
+  width: 1200px;
 }
 
-button,
-input,
-select,
-textarea {
-  font-family:'PTSans', Arial, sans-serif;
-  font-size: 14px; 
-  text-transform: uppercase;
-  font-weight: bold;
-}
 
-.site-navigation li {
+.main-navigation{
+	display:flex;
+	flex-direction:row;
+    align-content: flex-start;
+}
+.nav-item5{list-style: none;}
+
+.nav-item1,
+.nav-item2,
+.nav-item4,
+.main-header-logo{
+	color:black;
+	padding-right: 133px;
 	list-style: none;
 }
+
+
+
+.main-header-logo{
+	min-width: 140px;
+	min-height: 70px;
+}
+
+.main-header-logo{
+  z-index:1;  
+}
+
+
+.site-navigation{
+	position: absolute;
+	box-sizing:border-box;
+	display:flex;
+	align-items:center;
+	margin:0;
+	width:1200px;
+	padding-right:73px;
+}
+
+.logo-image{
+	position: relative;
+    z-index:-1;
+    margin-top:56px;	
+}
+
 
 .site-navigation a:hover,
 .site-navigation a:focus,
@@ -33,6 +65,7 @@ textarea {
 
 .navigation-current{
 	color: #766357;
+	list-style:none;
 }
 
 
@@ -42,11 +75,53 @@ textarea {
   background-color: #663d15;
 }
 
+.picture-service-1,
+.picture-service-2{
+	clear: both;
+	display:flex;
+	flex-direction:row;	
+	height:256px;
+}
 
-.service-block{
+.service{
+	display: flex;
+	flex-direction: row;
+	padding-left:20px; 
+	padding-top: 60px;
+}
+
+.service-item{
+	align-items:center;
+}
+
+.service-item-1{
+    padding-right:90px; 
+	box-sizing:border-box;
+	min-width: 280px;
+}
+.service-item-2{
+	padding-right:80px; 
+	box-sizing:border-box;
+	min-width: 290px;
+}
+.service-item-3{
+	padding-right:165px;
+	box-sizing:border-box;
+}
+.service-item-4{
+	padding-right:147px;
+}
+
+.block-picture-house{
+	box-sizing: border-box;
+	min-width: 800px;
+	min-height: 256px;
+}
+
+.service-block-1{
 	color: white;
 	background-color: #81b3d2;
-	width:400px;
+	min-width:400px;
 	height: 256px;
 	text-align: center;
 	padding-top: 48px;
@@ -54,25 +129,18 @@ textarea {
 }
 
 
-.block-picture-house{
-	float:right;	
-}
-
 .block-picture-bridge{
-	padding:0;
-	width:799;	
-	height:256px;
-	float:left;
+	box-sizing: border-box;
+	min-width: 800px;
+	min-height: 256px;
+
 }
 
-.bridge-position{
-	margin-left: 800px; 
-}
 
 .picture-title{
 	font-size: 21px;
 	font-weight: bold;
-	line-height: 21px;
+	min-height: 21px;
 }
 
 
@@ -80,8 +148,9 @@ textarea {
 	margin: 0;
 	padding: 0;
 	font-size: 0;
-	line-height: 0;
+	min-height: 0;
 	visibility: hidden;
+	display:none;
 }
 
 a {
@@ -91,6 +160,15 @@ a {
 
 .service-2{
 	background-color: #eeeeee;
+	display: flex;
+	flex-direction: row;
+	margin: 0;
+	min-height: 256px;
+	box-sizing: border-box;
+	text-align: center;
+	color: #7d7d7d;
+	list-style: none;
+	padding-top: 50px;
 }
 
 .service-block{
@@ -99,15 +177,49 @@ a {
 
 .service-content{
 	list-style: none;
+	display: flex;
 }
 
 .service,
-.container-text,
-.service-2{
+.container-text{
 	text-align: center;
 	color: #7d7d7d;
 	list-style: none;
-	line-height: 26px;
+	line-height: 24px;
+}
+
+.Registration{
+	box-sizing: border-box;
+	min-height:290px;
+	margin:0;
+	text-align: center;
+	display: flex;
+	flex-direction:column;
+	justify-content: flex-end;
+}
+
+.container-title-2{
+    color: black;
+    font-size: 30px;
+    text-align: center;	
+	min-height: 36px;
+	
+}
+
+.search-data-button{
+	background-color: #766357;
+	box-sizing: border-box;
+	width: 568px;
+	height: 87px;
+	text-align: center;
+	padding-top: 34px;
+	align-self: center;
+}
+
+.info-345{
+	box-sizing: border-box;
+	min-height:255;
+	margin:0;
 }
 
 .item-title,
@@ -119,30 +231,9 @@ a {
 	line-height: 26px;
 }
 
-.container-title-2{
-    color: black;
-    font-size: 30px;
-    text-align: center;	
-	line-height: 36px;
-}
-
-.search-data-button{
-	background-color: #766357;
-	box-sizing: border-box;
-	width: 568px;
-	height: 87px;
-	text-align: center;
-	padding-top: 34px;
-	margin-left:317px;
-}
-
-
-
-
 .search-data-button:hover{
 background-color: #8d796d;	
 }
-
 
 .search-data{
 	color: white;
@@ -152,7 +243,6 @@ background-color: #8d796d;
 	line-height: 26px;
 	
 }
-
 
 .button-search{
 	font: inherit;
@@ -170,10 +260,6 @@ background-color: #8d796d;
 	background-color: #669ec0;
 }
 
-.data-block input{
-	color: black;
-}
-
 
 .search-block{
 	font-weight: bold;
@@ -187,7 +273,6 @@ background-color: #8d796d;
 	border: none;
 	cursor: pointer;
 	line-height: 26px;
-	margin-left: 13px;
 }
 
 .button-plus {
@@ -215,99 +300,125 @@ background-color: #8d796d;
 	padding-left: 55px;
 	padding-right: 55px;
 	box-sizing: border-box;
-	/* border: 1px solid red; */
 }
 
 .clear-float{
 	clear: both;
 }
 
-
-
-
 .input-wrap{
+   font: inherit;
    background: #f2f2f2;	
-   width: 340px;
-   float: left;
+   min-width: 340px;
    box-sizing: border-box;
    padding: 4px;   
 }
 
 .departure-input{
-	
+	font: inherit;
 	color: black;
 	background: transparent;
-	width: 300px;
+	min-width: 300px;
 	padding-bottom: 2px;
 }
 
-
-
-
 .departure-label{
-	width: 112px;
-	display: block;
-	float: left;
+	min-width: 112px;
 	padding-top: 8px;
 	
 }
 
 .departure-block {
-	 /* box-sizing: border-box; */
-     margin-bottom: 30px;	 
+     margin-bottom: 30px;
+     display: flex; 	 
 }
 
-.departure-block input{	
-   /* box-sizing: border-box; */
+.departure-input{	
 	border: none;
 }
 
-.people-label{
-    width: 112px;
-	display: block;
-	float: left;
-	padding-top: 8px;
-}
-
-
-.people-number-block{
-	background: #f2f2f2;	
-    width: 114px;
-    float: left;
-    box-sizing: border-box;
-    padding: 0px;
-	
-}
-
-.adult-block{
-	float: left;
+.adult-label{
 	box-sizing: border-box;
+    width: 112px;
+	padding-top: 8px;
+	margin-right:0px;
 }
 
 .children-label{
 	box-sizing: border-box;
 	position: relative;
-	padding-left:53px;
+	width: 112px;
+	padding-top: 8px;
+	padding-left: 45px;
 }
 
+
+
+.people-number-block{
+	box-sizing: border-box;
+	background: #f2f2f2;	
+    width: 105px;
+    box-sizing: border-box;
+    padding: 0px;
+	
+}
+
+.wrapper-people-1{
+	display:flex;
+	box-sizing: border-box;
+	width:235px;
+	align-items:center;
+}
+
+.wrapper-people-2{
+	display:flex;
+	box-sizing: border-box;
+	width:218px;
+	align-items:center;
+}
+
+.visitors-block{
+	display:flex;
+	box-sizing: border-box;
+	width: 458px;
+}
 
 .search-text{
 	color:black;
 }
 
 .people-input{	
+    font: inherit;
 	background-color:transparent;
     box-sizing: border-box;
 	border: none;
 }
 
-.adult-block path
-.child-block path{	
-	background-color:#f2f2f2;
-    box-sizing: border-box;
-	border: none;
+.map{
+	position:absolute; 
+	position: bottom;
+	z-index:-1;
 }
 
+.footer-contacts{
+	position: relative;
+	background-color: rgba(255,255,255,0.8);
+	z-index:1;
+}
+
+.footer-margin{
+	margin-top:473px;
+}
+
+
+.contacts{
+	display:flex;
+	margin-top:0;
+	margin-left: 125px;
+	margin-right:100px;
+	justify-content: space-between;	
+    min-height:120px;
+}
 
 .footer-tag a {
 	font-size: 21px;
@@ -319,6 +430,30 @@ background-color: #8d796d;
 	cursor: pointer;
 }
 
+.footer-block-tag{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	box-sizing: border-box;
+	width: 155;
+}
+
+
+.footer-block-social{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	box-sizing: border-box;
+	width: 155;
+}
+
+.footer-block-copyrite{
+	display:flex;
+	justify-content:space-between;
+	box-sizing: border-box;
+	width: 220px;
+	align-items:center;
+}
 
 .social-button{
 	padding-top: 15px;
@@ -334,8 +469,8 @@ background-color: #8d796d;
 
 .social-button a{
 	text-align: center;
-	
 }
+
 
 
 .social-button:hover,
@@ -346,41 +481,42 @@ background-color: #8d796d;
 	box-sizing: border-box;
 }
 
-.footer-copyrite path: hover,
-.footer-copyrite path: focus{
+.footer-copyrite-path: hover,
+.footer-copyrite-path: focus{
+	fill: #81b3d2;
+}
+
+.calendar-path: active,
+.calendar-path: focuse,
+.calendar-path: hover{
 	fill: #81b3d2;
 }
 
 
 
-.calendar:active path,
-.calendar:hover path{
-	fill: #81b3d2;
-}
 
-
-.calendar{
-    position: relative;
-    top: 3px;
-}
-
-.data-block input:hover,
-.data-block input:focus,
-.data-block input:active{
-
-	background-color: white;
-}
 
 .button-plus: hover,
-.button-plus: hover,
+.button-plus: focus,
 .button-minus: focus,
-.button-minus: focus{
+.button-minus: hover{
 	fill: #81b3d2;
 }
 
+.adult-block{
+	box-sizing: border-box;
+	margin-right: 0;
+}
 
-.adult-block input {
-	width: 38px;
+.child-block{
+	box-sizing: border-box;
+	margin-right: 0;
+	width: 230px;
+}
+
+.people-input{
+	font: inherit;
+	width: 50px;
 	height: 38px;
 	margin: 0;
 	padding: 0;
@@ -389,17 +525,7 @@ background-color: #8d796d;
 	border: none;
 }
 
-.child-block input {
-	width: 38px;
-	height: 38px;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-	background-color: #f2f2f2;
-	border: none;
-}
-
-.date-departure svg {	
+.calendar-in {	
 	top: 63px;
 	right: 63px;
 	cursor: pointer;
@@ -407,41 +533,67 @@ background-color: #8d796d;
 	border: none;
 }  
 
-.filter fieldset{
+.calendar-out{
+    position: relative;
+	cursor: pointer;
+    top: 3px;
+}
+
+
+.infrastructure,
+.house-type,
+.price-option{
 	border:none;
 }
 
-.filter ul{
+.price-option{
+	position:right;
+	margin-left:300px;
+}
+
+
+
+.filter-ul{
 	 list-style: none;
 }
 
-.filter li {
-	padding-left: 26px;
+.filter-li {
 	padding-bottom: 29px;
 	font-size: 14px;
 	line-height: 21px;
 }
 
-.filter-title{
+.filter-title-1,
+.filter-title-2{
    font-size: 16px;
    font-weight: bold;
-   text-align: center;
    line-height: 21px;
+   padding-left:30px;
+   padding-top:30px;
+}
+
+.filter-title-3{
+   font-size: 16px;
+   font-weight: bold;
+   line-height: 21px;
+   padding-left:0px;
+   padding-top:30px;
 }
 
 
-.price-option input{
-	display: block;
+.price-input{
+	font: inherit;
 	background: transparent;
 	border: 2px solid white;
 	border-radius: 2px;
 	outline: none;
 	cursor: pointer;
-    color: white;	
+    color: white;
+    box-sizing: border-box;	
+	height: 30px;
 }
 
 .filter-button{	
-    display: block;
 	margin: 0 0;
 	font: inherit;
 	font-size: 14px;
@@ -467,6 +619,14 @@ background-color: #8d796d;
   color: white;
   background-position: top center;
   background-repeat: no-repeat;	
+  width:1200px;
+  height: 218px;
+  display:flex;
+}
+
+.infrastructure{
+	box-sizing: border-box;
+	text-align: left;
 }
 
 input[type='checkbox'] + label {
@@ -482,8 +642,8 @@ input[type='checkbox'] + label::before {
 	position: absolute;
 	top: -4px;
 	left: -6px;
-	width: 27px;
-	height: 23px;
+	min-width: 27px;
+	min-height: 23px;
 	background-image: url('../svg/checkbox-off.svg');
 	background-repeat: no-repeat;
 }
@@ -512,22 +672,24 @@ input[type="checkbox"]:focus + label {
 .price-range {
   position: relative;
   margin-bottom: 32px;
+  box-sizing: border-box;
+  text-align:center;
 }
 .price-range .scale {
-  height: 2px;
+  min-height: 2px;
   background-color: #ffffff;
   opacity: 0.3;
 }
 .price-range .bar {
-  width: 80%;
-  height: 2px;
+  min-width: 80%;
+  min-height: 2px;
   background: #ffffff;
 }
 .range-toggle {
   position: absolute;
   top: -9px;
-  width: 4px;
-  height: 4px;
+  min-width: 4px;
+  min-height: 4px;
   border-radius: 50%;
   cursor: pointer;
   background: #ababab;
@@ -541,19 +703,52 @@ input[type="checkbox"]:focus + label {
   right: 320px;
 }
 
+.search-options{
+	display:flex;
+	align-items:center;
+	box-sizing: border-box;
+	min-height: 50px;
+	border-bottom: 1px solid #e5e5e5;
+}
+.search-criteria{
+	display:flex;
+}
+
+.search-criteria{
+	font-weight:bold;
+}
+.arrows{
+	margin-left:410px
+}
+
+.search-parameters{
+	display:flex;
+	box-sizing: border-box;
+	width:280px;
+	font-size:12px;
+	line-height: 18px;
+	justify-content: space-between;
+}
+
 .search-parameters,
 .serach-arrows{
 	list-style: none;
 	font-size: 12px;
+	
 }
+
 
 .search-result{
 	font-size: 21px;
 	font-weight: bold;
+	margin-left:73px;
+	margin-right:50px;
+	box-sizing: border-box;
+	width:150px;
 }
 
  .search-parameters a{
-	 color:#b6b6b6;
+	color:#b6b6b6;
 	text-decoration: underline dotted #b6b6b6;	
 }
 
@@ -561,16 +756,31 @@ input[type="checkbox"]:focus + label {
 .search-parameters a:focus,
 .search-parameters a:active {
   font-size: 12px;
-  line-height: 18px;
+  min-height: 18px;
   color:#81b3d2;
   text-decoration: none;
 }
+.serach-results{
+	margin:0;
+}
 
-.serach-arrows path:hover,
-.serach-arrows path:focus,
-.serach-arrows path:active{
+.price-min-max{
+	margin-bottom:20px;
+}
+
+
+.search-arrows{
+	display: flex;
+	box-sizing: border-box;
+	width: 35px;
+}
+
+.serach-arrows-path:hover,
+.serach-arrows-path:focus,
+.serach-arrows-path:active{
 	fill: #81b3d2;
 }
+
 
 .house-title{
 	font-size: 21px;
@@ -581,9 +791,16 @@ input[type="checkbox"]:focus + label {
 }
 
 .catalog-list{
+	margin:0;
+	display:flex;
 	font-size: 14px;
 	color: #b6b6b6;
-	margin:0;
+	margin-left:73px;
+	border-bottom: 1px solid #e5e5e5;
+	align-items:center;
+	box-sizing: border-box;
+	height:150px;
+	
 }
 
 .catalog-list .button{
@@ -599,13 +816,14 @@ input[type="checkbox"]:focus + label {
 }
 
 .button-info{
-	width: 110px;
-	height: 27px;
+	font: inherit;
+	min-width: 110px;
+	min-height: 27px;
 	box-sizing: border-box;
 	text-align: center;
-	font-size: 14px;
+	vertical-align: center;
 	background-color: #81b3d2;
-	float:left;
+	padding-top: 3px;
 }
 
 
@@ -615,7 +833,8 @@ input[type="checkbox"]:focus + label {
 	box-sizing: border-box;
 	text-align: center;
 	font-size: 14px;
-	background-color: #766357;	
+	background-color: #766357;
+    padding-top: 3px;	
 }
 
 .button-reservation a,
@@ -635,53 +854,72 @@ input[type="checkbox"]:focus + label {
 .rate-number{
     background-color: #f2f2f2;
 	padding-top: 10px;
-	display: block;
-	width: 110px;
-	height: 27px;
+	min-width: 110px;
+	min-height: 27px;
 	text-align: center;
 	line-height: 21px;
 }
 
 .catalog-picture{
-	width:135px;
-	height: 150px;
-	float:left;	
-	padding-top:30px;
+	box-sizing: border-box;
+	min-width:135px;
+	min-height: 150px;
+	padding-top:30px; 
 	margin-left:0px;
+	vertical-align:center;
 }
 
 .catalog-info{
-	width:270px;
-	height:150px;
+	min-width:270px;
+	min-height:150px;
 	box-sizing: border-box;
 	margin-left:30px;
-	float: left;
-    padding-top:30px;	
+	vertical-align:center;
+	padding: 30px 0 30px 0;	
 }
 .catalog-rate{
 	position: relative;
 	text-align:right;
-	width:110px;
+	min-width:110px;
 	box-sizing: border-box;
-	height:150px;
-	margin-left:1057px;
-	padding-top:30px;
+	min-height:150px;
+	margin-left:520px;
+	padding:30px 0 30px 0;
+}
+
+.arrow-up{
+	margin-right:13px;
 }
 
 .catalog-type{
 	position: absolute;
 	box-sizing: border-box;
-	width:110px;
-	height:60px;
-	float: right;
+	min-width:110px;
+	min-height:60px;
+	display:flex;
+	padding-top: 7px;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .catalog-reservation{
 	position: relative;
 	box-sizing: border-box;
-	width:142px;
-	height:60px;
+	min-width:142px;
+	min-height:60px;
 	margin-left:116px;
+	display:flex;
+	padding-top: 7px;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+
+.social-button{
+	box-sizing: border-box;
+	min-width: 46px;
+	min-height: 48 px;
+	margin-right: 6px;	
 }
 
 
