--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'PTSans', Arial, sans-serif;
+    font-family: "PTSans", Arial, sans-serif;
     font-size: 14px;
     color: black;
     text-transform: uppercase;
@@ -225,7 +225,7 @@ buttom:focus {
     font-size: 21px;
     font-weight: bold;
     min-height: 21px;
-    width: 51.5%;
+    width: 54%;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
@@ -303,7 +303,7 @@ a {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     text-align: center;
-    color: #7d7d7d;
+    color: #333333;
     list-style: none;
     padding-top: 10px;
 }
@@ -339,7 +339,7 @@ a {
 
 .service {
     text-align: center;
-    color: #7d7d7d;
+    color: #333333;
     list-style: none;
     line-height: 24px;
     -webkit-box-sizing: border-box;
@@ -348,10 +348,9 @@ a {
 
 .container-text {
     text-align: center;
-    color: #7d7d7d;
+    color: #333333;
     list-style: none;
     line-height: 24px;
-
 }
 
 .button-container {
@@ -387,11 +386,10 @@ a {
     margin-top: 50px;
 }
 
-.search-data-button {
+.search-data-button{
     font: inherit;
     font-size: 21px;
 	padding-top: 30px;
-    position: absolute;
     font-weight: bold;
     background-color: #766357;
     -webkit-box-sizing: border-box;
@@ -408,7 +406,6 @@ a {
     text-transform: uppercase;
     border: none;
     cursor: pointer;
-	
 }
 
 .search-data-button a {
@@ -522,11 +519,6 @@ a {
     border: none;
     cursor: pointer;
     margin-right: -13px;
-
-}
-
-.clear-float {
-    clear: both;
 }
 
 .input-wrap {
@@ -643,7 +635,7 @@ a {
 .map {
     height: 593px;
     width: 100%;
-    background-image: url('../img/map.jpg');
+    background-image: url("../img/map.jpg");
     text-align: center;
     z-index: -1;
 }
@@ -930,7 +922,7 @@ a {
 }
 
 
-input[type='checkbox'] + label {
+input[type="checkbox"] + label {
     position: relative;
     padding-left: 42px;
     cursor: pointer;
@@ -938,26 +930,26 @@ input[type='checkbox'] + label {
     outline: none;
 }
 
-input[type='checkbox'] + label::before {
-    content: '';
+input[type="checkbox"] + label::before {
+    content: "";
     position: absolute;
     top: -4px;
     left: -6px;
     min-width: 27px;
     min-height: 23px;
-    background-image: url('../svg/checkbox-off.svg');
+    background-image: url("../img/checkbox-off.svg");
     background-repeat: no-repeat;
     outline: none;
     outline: none;
 }
 
 input[type="checkbox"]:checked + label::before {
-    background-image: url("../svg/checkbox-on.svg");
+    background-image: url("../img/checkbox-on.svg");
     outline: none;
 }
 
 input[type="checkbox"]:disabled + label::before {
-    background-image: url("../svg/checkbox-off.svg");
+    background-image: url("../img/checkbox-off.svg");
     outline: none;
 }
 
@@ -968,7 +960,7 @@ input[type="checkbox"]:disabled + label {
 }
 
 input[type="checkbox"]:checked:disabled + label::before {
-    background-image: url("../svg/checkbox-on.svg");
+    background-image: url("../img/checkbox-on.svg");
 }
 
 input[type="checkbox"]:checked:disabled + label {
@@ -1050,14 +1042,18 @@ input[type="checkbox"]:checked:disabled + label {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding-right: 300px;
+	margin-left:-15%;
+}
+
+.search-sort{
+	font-size: 12px;
 }
 
 .search-result {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin-right: 55px;
+    margin-right: 50px;
     font-size: 21px;
     font-weight: bold;
     -webkit-box-sizing: border-box;
@@ -1069,7 +1065,7 @@ input[type="checkbox"]:checked:disabled + label {
     display: -ms-flexbox;
     display: flex;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 18px;
 }
 
@@ -1079,10 +1075,11 @@ input[type="checkbox"]:checked:disabled + label {
     display: flex;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-    width: 330px;
+    width: 280px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+	align-self: center;
 }
 
 .search-arrows {
@@ -1174,6 +1171,10 @@ input[type="checkbox"]:checked:disabled + label {
     fill: #81b3d2;
 }
 
+.arrows{
+	margin-right: -15%;
+}
+
 .house-title {
     font-size: 21px;
     color: black;
@@ -1245,7 +1246,7 @@ input[type="checkbox"]:checked:disabled + label {
 }
 
 .button-info {
-    font-family: 'PTSans', Arial, sans-serif;
+    font-family: "PTSans", Arial, sans-serif;
     font-size: 14px;
     color: white;
     text-transform: uppercase;
@@ -1298,7 +1299,7 @@ input[type="checkbox"]:checked:disabled + label {
     color: white;
     font-weight: bold;
     line-height: 21px;
-    font-family: 'PTSans', Arial, sans-serif;
+    font-family: "PTSans", Arial, sans-serif;
     text-transform: uppercase;
     border: none;
     vertical-align: middle;
@@ -1415,7 +1416,7 @@ input[type="checkbox"]:checked:disabled + label {
 
 
 .modal-block {
-    font-family: 'PTSans', Arial, sans-serif;
+    font-family: "PTSans", Arial, sans-serif;
     font-size: 14px;
     color: black;
     text-transform: uppercase;
